# aaf-multichannel-creator

./: README.md  aaf_multichannel_creator.py  pyproject.toml
tests/: test_multichannel_aaf.py  test_wav_utils.py
